# Novus

./: .build.yml  .clang-format  .gitignore  .gitmodules  BUILDING.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Messages.sh  README.md  REUSE.toml  zone.xiv.novus.appdata.xml  zone.xiv.novus.yml
apps/: CMakeLists.txt
apps/argcracker/: README.md
apps/armoury/: CMakeLists.txt  README.md  geareditor.rc  zone.xiv.novus.geareditor.desktop
apps/enemyeditor/: CMakeLists.txt  README.md  enemyeditor.rc  zone.xiv.novus.enemyeditor.desktop
apps/gamelauncher/: CMakeLists.txt  README.md  gamelauncher.rc
apps/karuku/: CMakeLists.txt  README.md  exceleditor.rc  zone.xiv.karaku.desktop  zone.xiv.novus.exceleditor.desktop
apps/launcher/: CMakeLists.txt  README.md
apps/mapeditor/: CMakeLists.txt  README.md  mapeditor.rc  zone.xiv.mapeditor.desktop  zone.xiv.novus.mapeditor.desktop
apps/mateditor/: CMakeLists.txt  README.md  mateditor.rc
apps/mdlviewer/: CMakeLists.txt  mdlviewer.rc
apps/patchdiff/: CMakeLists.txt  README.md  patchdiff.rc  zone.xiv.novus.patchdiff.desktop
apps/sagasu/: CMakeLists.txt  README.md  dataexplorer.rc  zone.xiv.novus.dataexplorer.desktop
apps/sdklauncher/: CMakeLists.txt  README.md  zone.xiv.novus.sdk.desktop
argcracker/: CMakeLists.txt  README.md
argcracker/include/: blowfish.h
argcracker/src/: main.cpp  tickcount.cpp
armoury/: CMakeLists.txt  README.md  zone.xiv.armoury.desktop
armoury/include/: boneeditor.h  cmpeditor.h  fullmodelviewer.h  gearlistmodel.h  gearlistwidget.h  gearview.h  mainwindow.h  materialview.h  penumbraapi.h  quaternionedit.h  settingswindow.h  singlegearview.h  vec3edit.h
armoury/skeletons/: c0101_deform.json  c0101b0001.skel  c0201_deform.json  c0201b0001.skel  c0301_deform.json  c0301b0001.skel  c0401_deform.json  c0501_deform.json  c0501b0001.skel  c0601_deform.json  c0601b0001.skel  c0701_deform.json  c0701b0001.skel  c0801_deform.json  c0801b0001.skel  c0901_deform.json  c0901b0001.skel  c1001_deform.json  c1101_deform.json  c1101b0001.skel  c1201_deform.json  c1301_deform.json  c1301b0001.skel  c1401_deform.json  c1401b0001.skel  c1501_deform.json  c1501b0001.skel  c1701_deform.json  c1701b0001.skel  c1801_deform.json  c1801b0001.skel
armoury/src/: boneeditor.cpp  cmpeditor.cpp  fullmodelviewer.cpp  gearlistmodel.cpp  gearlistwidget.cpp  gearview.cpp  main.cpp  mainwindow.cpp  materialview.cpp  quaternionedit.cpp  settingswindow.cpp  singlegearview.cpp  vec3edit.cpp
bonedecomp/: CMakeLists.txt  README.md
bonedecomp/src/: main.cpp
common/: CMakeLists.txt
common/include/: aboutdata.h  aboutwindow.h  booledit.h  editwidget.h  enumedit.h  filecache.h  filetypes.h  hashdatabase.h  knownvalues.h  novusmainwindow.h  openinwidget.h  pathedit.h  quaternionedit.h  settings.h  uintedit.h  utility.h  vec3edit.h
common/src/: aboutdata.cpp  aboutwindow.cpp  booledit.cpp  editwidget.cpp  enumedit.cpp  filecache.cpp  filetypes.cpp  hashdatabase.cpp  novusmainwindow.cpp  openinwidget.cpp  pathedit.cpp  quaternionedit.cpp  settings.cpp  uintedit.cpp  utility.cpp  vec3edit.cpp
exdviewer/: CMakeLists.txt  README.md
exdviewer/include/: mainwindow.h
exdviewer/src/: main.cpp  mainwindow.cpp
explorer/: CMakeLists.txt  README.md
explorer/include/: filepropertieswindow.h  filetreewindow.h  mainwindow.h
explorer/src/: filepropertieswindow.cpp  filetreewindow.cpp  main.cpp  mainwindow.cpp
karuku/: CMakeLists.txt  README.md
karuku/include/: mainwindow.h
karuku/src/: main.cpp  mainwindow.cpp  sheetlistwidget.cpp
launcher/: CMakeLists.txt  zone.xiv.novus.desktop
launcher/include/: mainwindow.h
launcher/src/: main.cpp  mainwindow.cpp
mapeditor/: CMakeLists.txt  README.md  zone.xiv.mapeditor.desktop
mapeditor/src/: main.cpp  mainwindow.cpp  maplistwidget.cpp  mapview.cpp
mateditor/: CMakeLists.txt
mateditor/include/: mainwindow.h  materialpropertyedit.h  materialview.h
mateditor/src/: main.cpp  mainwindow.cpp  materialpropertyedit.cpp  materialview.cpp
mdlviewer/: CMakeLists.txt  README.md  zone.xiv.mdlviewer.desktop
mdlviewer/include/: aboutwindow.h  boneeditor.h  cmpeditor.h  fullmodelviewer.h  gearlistmodel.h  gearview.h  mainwindow.h  quaternionedit.h  singlegearview.h  vec3edit.h
mdlviewer/src/: boneeditor.cpp  cmpeditor.cpp  fullmodelviewer.cpp  gearlistmodel.cpp  gearlistwidget.cpp  gearview.cpp  main.cpp  mainwindow.cpp  quaternionedit.cpp  singlegearview.cpp  vec3edit.cpp
parts/: CMakeLists.txt
parts/cmp/: CMakeLists.txt  cmppart.cpp  cmppart.h
parts/dic/: CMakeLists.txt  dicpart.cpp  dicpart.h
parts/exd/: CMakeLists.txt  excelmodel.cpp  excelmodel.h  excelresolver.cpp  excelresolver.h  exdpart.cpp  exdpart.h  schema.cpp  schema.h
parts/exl/: CMakeLists.txt  exlpart.cpp  exlpart.h
parts/hex/: CMakeLists.txt  hexpart.cpp  hexpart.h  qhexview.cpp  qhexview.h
parts/luab/: CMakeLists.txt  luabpart.cpp  luabpart.h  scriptprocessor.cpp  scriptprocessor.h
parts/mdl/: CMakeLists.txt  mdlexport.cpp  mdlexport.h  mdlimport.cpp  mdlimport.h  mdlpart.cpp  mdlpart.h  vulkanwindow.cpp  vulkanwindow.h
parts/mtrl/: CMakeLists.txt  knownvalues.h  mtrlpart.cpp  mtrlpart.h
parts/scene/: CMakeLists.txt  animation.cpp  animation.h  collapsesection.cpp  collapsesection.h  exceledit.cpp  exceledit.h  mapview.cpp  mapview.h  objectidedit.cpp  objectidedit.h  objectpass.cpp  objectpass.h  objectpropertieswidget.cpp  objectpropertieswidget.h  primitives.cpp  primitives.h  scenelistmodel.cpp  scenelistmodel.h  scenelistwidget.cpp  scenelistwidget.h  scenepart.cpp  scenepart.h  scenestate.cpp  scenestate.h
parts/shcd/: CMakeLists.txt  shcdpart.cpp  shcdpart.h
parts/shpk/: CMakeLists.txt  shpkpart.cpp  shpkpart.h
parts/sklb/: CMakeLists.txt  sklbpart.cpp  sklbpart.h
parts/tex/: CMakeLists.txt  imagelabel.cpp  imagelabel.h  texpart.cpp  texpart.h
parts/tmb/: CMakeLists.txt  tmbpart.cpp  tmbpart.h
renderer/: CMakeLists.txt  README.md
renderer/include/: baserenderer.h  buffer.h  (+18 more)
sagasu/: CMakeLists.txt  README.md  zone.xiv.sagasu.desktop
sdklauncher/: CMakeLists.txt
(+187 files in other folders)
