# SPDX-FileCopyrightText: 2024 Joshua Goins <josh@redstrate.com>
# SPDX-License-Identifier: CC0-1.0

add_subdirectory(karuku)
add_subdirectory(armoury)
add_subdirectory(argcracker)
add_subdirectory(sagasu)
add_subdirectory(mapeditor)
add_subdirectory(mdlviewer)
add_subdirectory(launcher)
add_subdirectory(mateditor)