# SPDX-FileCopyrightText: 2023 Joshua Goins <josh@redstrate.com>
# SPDX-License-Identifier: CC0-1.0

add_subdirectory(cmp)
add_subdirectory(dic)
add_subdirectory(exd)
add_subdirectory(exl)
add_subdirectory(hex)
add_subdirectory(mdl)
add_subdirectory(mtrl)
add_subdirectory(shpk)
add_subdirectory(sklb)
add_subdirectory(tex)
add_subdirectory(luab)
add_subdirectory(scene)
add_subdirectory(tmb)
